fixed styling for error message on mobile

--- a/src/widgets/voiceNavigator/css/modal/modal.styl
+++ b/src/widgets/voiceNavigator/css/modal/modal.styl
@@ -377,8 +377,10 @@ body
     width 70%
     margin 0 auto 10px auto
     clearfix()
+    position relative
+    bottom 5px
     @media mobile, (max-width: 751px)
-      margin 0 auto 5px auto
+      margin 0 auto 2px auto
     p#warningMessage
       float left
       font-weight 300
@@ -395,10 +397,11 @@ body
       float right
       width 5%
       padding-right 5px
-      a#closeButton
-        color #aaa
+      a#closeWarningButton
+        color #C92727
         &:hover
-          color #555
+          color #8A1212
+          cursor pointer
 
 
 #history
@@ -480,7 +483,9 @@ body
                 animation zoomin 0.2s ease-out (0.04s * i) forwards
         &.text-input
           opacity 1
-          padding 10px 30px 15px 30px
+          padding 15px 30px 28px 30px
+          @media mobile, (max-width: 751px)
+            padding 15px 30px 24px 30px
           form
             padding 0 50px 0 0
             margin 0 20px 0 75px
